--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Despliegue en Heroku desde Docker Hub
+name: Despliegue en Heroku
 
 on:
   push:
@@ -13,15 +13,11 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v4
 
-      - name: Login en Heroku Container Registry
-        run: |
-          docker login registry.heroku.com --username=_ --password=${{ secrets.HEROKU_API_KEY }}
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
-      - name: Login en Docker Hub
-        run: |
-          docker login docker.io -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: Login a Docker Hub
+        run: docker login docker.io -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
         env:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
           DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
@@ -30,28 +26,23 @@ jobs:
         run: |
           docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/holaMundo4:latest
 
-      - name: Etiquetar imagen para Heroku
+      - name: Renombrar imagen para Heroku
         run: |
-          docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/holaMundo4:latest registry.heroku.com/tu-app-heroku/web
+          docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/holaMundo4:latest registry.heroku.com/holamundo4/web
+
+      - name: Login al Heroku Container Registry
+        run: |
+          echo "HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}"
+          heroku container:login -a holamundo4
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
       - name: Subir imagen a Heroku
         run: |
-          docker push registry.heroku.com/tu-app-heroku/web
+          docker push registry.heroku.com/holamundo4/web
 
       - name: Redesplegar en Heroku
         run: |
-          APP_NAME=holamundo4
-          curl -n -X PATCH https://api.heroku.com/apps/ $APP_NAME/formation \
-            -d '{
-              "updates": [
-                {
-                  "type": "web",
-                  "docker_image": "$(docker inspect registry.heroku.com/$APP_NAME/web | jq -r '.[0].RepoDigests[0]' | cut -d "@" -f 2)"
-                }
-              ]
-            }' \
-            -H "Content-Type: application/json" \
-            -H "Accept: application/vnd.heroku+json; version=3.docker-reformation"
+          heroku container:release web -a holamundo4
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          
