--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,13 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
-            - name: Desplegar en Heroku
+      - name: Desplegar en Heroku
         run: |
           # Agregar todos los archivos y hacer commit (Heroku necesita un repo limpio)
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-          # Hacer commit vacío para forzar el push
-          git commit --allow-empty -m "Forzar deploy a Heroku"
+          git add .
+          git commit -m "Deploy desde GitHub Actions"
 
           # Hacer push a Heroku
           git push heroku main
