--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v4
 
-      - name: Descargar e instalar Heroku CLI
+      - name: Instalar Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh  | sh
 
-      - name: Verificar instalación de Heroku
+      - name: Verificar instalación
         run: heroku --version
 
       - name: Iniciar sesión en Heroku
@@ -28,7 +28,11 @@ jobs:
 
       - name: Configurar remote de Heroku
         run: |
-          heroku git:remote -a holamundo4
+          # Eliminar remote existente (si hay)
+          git remote remove heroku || true
+
+          # Configurar nuevamente el remote de Heroku
+          heroku git:remote -a tu-app-heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
