--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,15 +26,14 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
-      - name: Configurar remote de Heroku
+      - name: Eliminar remote heroku si existe
         run: |
-          # Eliminar remote existente (si hay)
-          git remote remove heroku || true
+          git remote remove heroku || echo "No había remote heroku"
 
-          # Configurar nuevamente el remote de Heroku
-          heroku git:remote -a tu-app-heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Configurar remote de Heroku manualmente
+        run: |
+          # Usar el API KEY para configurar el remote
+          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/holamundo4.git
 
       - name: Hacer commit vacío para forzar deploy
         run: |
