workflow antes del deploy28.0

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           git remote remove heroku || echo "No había remote heroku"
 
           # Crear el remote usando el CLI de Heroku
-          heroku git:remote -a holaMundo4
+          heroku git:remote -a holamundo4
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
