--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,21 +16,29 @@ jobs:
       - name: Instalar Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
+          sudo snap install heroku --classic  # Método alternativo
 
-      - name: Configurar Heroku
+      - name: Autenticar en Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
         run: |
-          # Autenticación segura
+          # Método 1: Autenticación directa
           heroku auth:token $HEROKU_API_KEY
           
-          # Configurar remote
-          git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git
+          # Método 2 alternativo (para Docker)
+          echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
+
+          # Verificar autenticación
+          heroku apps
+
+      - name: Configurar remote de Heroku
+        env:
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+        run: |
+          git remote add heroku https://git.heroku.com/$HEROKU_APP_NAME.git
 
       - name: Desplegar aplicación
         env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
         run: |
-          # Forzar push a Heroku (usar --force solo si es necesario)
-          git push heroku HEAD:main
+          git push --force heroku HEAD:main
