--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,63 @@
-name: Despliegue en Heroku
+name: Deploy to Heroku with Docker
 
 on:
   push:
     branches:
-      - main
+      - main  # Cambia si usas otra rama
 
 jobs:
-  deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout del código
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Instalar Heroku CLI
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/holamundo4:latest
+
+      - name: Install Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh  | sh
+          heroku --version
 
-      - name: Verificar instalación
-        run: heroku --version
-
-      - name: Iniciar sesión en Heroku
-        run: |
-          # Usar el API KEY para autenticar
-          heroku auth:token:set ${{ secrets.HEROKU_API_KEY }}
+      - name: Ensure container stack
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-
-      - name: Configurar remote de Heroku (oficial)
         run: |
-          # Eliminar remote heroku si existe
-          git remote remove heroku || echo "No había remote heroku"
+          heroku stack:set container -a holamundo4
 
-          # Crear el remote usando el CLI de Heroku
-          heroku git:remote -a holamundo4
+      - name: Log in to Heroku Container Registry
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-
-      - name: Hacer commit vacío para forzar deploy
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git commit --allow-empty -m "Forzar deploy a Heroku"
+          echo "$HEROKU_API_KEY" | docker login --username=_ --password-stdin registry.heroku.com
 
-      - name: Desplegar en Heroku
+      - name: Pull image from DockerHub
         run: |
-          git push heroku main
+          docker pull ${{ secrets.DOCKER_USERNAME }}/holamundo4:latest
+
+      - name: Tag and Push to Heroku
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/holamundo4:latest registry.heroku.com/holamundo4/web
+          docker push registry.heroku.com/holamundo4/web
+
+      - name: Release on Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: |
+          heroku container:release web --app holamundo4
